# c-w

./: .gitignore  ACE_VOS_BLOCKER_SPEC.md  README.md  agent-manifest.json  board.json  design_instructions.md  index.html  llms.txt  main.py  pyproject.toml  robots.txt  signature.html  sitemap.xml
.github/workflows/: deploy-pages.yml  weave-ingest.yml  weave-issue-ingest.yml  weave-permanent-ingest.yml  weave-prune-ephemeral.yml
cloudflare/trace-bridge/: README.md  wrangler.toml
cloudflare/trace-bridge/src/: index.js
scripts/: board_engine.py  build_site.py
server/: config.py  git_ingest.py  github_dispatch.py  main.py  models.py  payments.py  store.py
templates/: loom_board.html
