[project]
name = "dev-personalwebsite"
version = "0.2.0"
description = "Loom Engine: autonomous ribbon board with tiered one-time payment flows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
payments = [
    "stripe>=11.0.0",
    "httpx>=0.27.0",
]
runtime = [
    "redis>=5.2.0",
]
